<resources>
    <string name="app_name">Task</string>

    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="radius">Radius in meters:</string>
    <string name="wifi">Wifi name:</string>
    <string name="remove_geofence">Remove Geofence</string>
    <string name="add_geofence">Add Geofence</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Inside</string>
    <string name="geofence_transition_exited">Outside</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofence() call</string>
    <string name="unknown_geofence_error">Unknown error: the Geofence service is not available now</string>
    <string name="geofence_transition_invalid_type">Geofence transition error: invalid transition type %1$d</string>

    <string name="settings">Settings</string>
</resources>
